[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TEMC"
version = "0.0.1"
authors = [
  { name="Travis Hahn", email="travis.hahn@psu.edu" },
]
description = "Toolkit for the Evaluation of Model Convection (TEMC)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/travis-j-hahn/TEMC"
Issues = "https://github.com/travis-j-hahn/TEMC/issues"
